sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:7: error: not found: value j
  while(j < 20){  
        ^AlgBubbleSort1:19: error: not found: value j
    j += 1
    ^