sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
 	var isSort:Boolean = false
	var sorted:Boolean = false;
  
	while(j < 20){  

    for(i <- 0 to (getNombreValeurs()-2)){

      if(plusPetitQue(i+1, i)){

        echange(i, i+1);

      }

    }
    
    j += 1
    
  }
 
}
          
